Some updates to using or not using the coeff channels

--- a/evaluate_model_design/non-dim_in-out_DG.ipynb
+++ b/evaluate_model_design/non-dim_in-out_DG.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bc80cf57-5376-4562-b0f0-27952d60d360",
    "metadata": {},
    "outputs": [],
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d43a33fa-337f-48b5-869c-ef6c4fd275ed",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "32369470-7ffa-42c1-90d0-6820a96a6bf2",
    "metadata": {},
    "outputs": [
@@ -48,9 +48,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-10-04 21:06:10.943195: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2024-10-04 21:06:10.943229: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2024-10-04 21:06:10.944628: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2024-10-08 22:45:42.291614: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:10575] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2024-10-08 22:45:42.291644: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:479] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2024-10-08 22:45:42.292960: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1442] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -76,74 +76,103 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "id": "4cf42a10-fb5c-4799-839c-55e6d4ace569",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Experiment\n",
-    "experiment_config= {'simulation_names':['P2L'], \n",
+    "experiment_config= {'experiment_name': 'DG_1_non_dim', # Any sort of name will work here \n",
+    "                    'simulation_names':['DG'], \n",
     "                    'filter_scales':['50','100','200','400'],\n",
-    "                    'window_size':3, \n",
+    "                    'window_size':1, \n",
     "                    \n",
-    "                    'input_channels' : ['dudx_widened',  \n",
-    "                                        'dvdx_widened', \n",
-    "                                        'dudy_widened',\n",
-    "                                        'dvdy_widened',\n",
+    "                    'input_channels' : ['dudx_widened_nondim',  \n",
+    "                                        'dvdx_widened_nondim', \n",
+    "                                        'dudy_widened_nondim',\n",
+    "                                        'dvdy_widened_nondim',\n",
     "                                        'dhdx_widened',\n",
-    "                                        'dhdy_widened',\n",
-    "                                        'dedx_middle_widened',\n",
-    "                                        'dedy_middle_widened',\n",
-    "                                        'filter_scale'],\n",
+    "                                        'dhdy_widened'],\n",
     "                    \n",
-    "                    'output_channels' : ['uphp',\n",
-    "                                         'vphp'],\n",
+    "                    'output_channels' : ['uphp_nondim',\n",
+    "                                         'vphp_nondim'],\n",
     "                    \n",
-    "                    'coeff_channels'  : [], \n",
-    "        \n",
-    "                    'train_time_range': slice(0, 640),\n",
-    "                    'test_time_range' : slice(-64, None),\n",
+    "                    'coeff_channels'  : ['filter_scale'], \n",
+    "\n",
+    "                    'all_time_range': slice(0, 1400), \n",
+    "                    'train_time_range': slice(0, 1200),\n",
+    "                    'test_time_range' : slice(-100, None),\n",
     "                    'num_train_batches': 37, \n",
     "                    'num_test_batches' : 5, \n",
-    "\n",
-    "                    'num_inputs': 8*9 + 1, \n",
+    "                   \n",
     "                    'network_shape': [36, 36, 2],\n",
-    "\n",
-    "                    'exp_ckpt_save_dir': '/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/test_ckpt'\n",
-    "                    \n",
-    "            }\n",
+    "                    'single_layer_mask': True}\n",
     "\n",
     "experiment_config['all_ml_variables'] = (experiment_config['input_channels'] + \n",
     "                                           experiment_config['output_channels'] +\n",
     "                                           experiment_config['coeff_channels'])\n",
     "\n",
-    "experiment_config['num_inputs'] = (len(experiment_config['input_channels']) - 1)*experiment_config['window_size']**2 + 1"
+    "experiment_config['num_inputs'] = (len(experiment_config['input_channels']) - 1)*experiment_config['window_size']**2 + 1\n",
+    "\n",
+    "experiment_config['exp_ckpt_save_dir'] = ('/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/non_dim_models/' + \n",
+    "                                          '_'.join(experiment_config['simulation_names']) + \n",
+    "                                          '_' + str(experiment_config['window_size']) + '_with_topo')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
+   "id": "d46a2b95-bae9-4345-b863-fb5dac3d5ffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "experiment_config['num_inputs']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "id": "9658b5f4-57bc-4f98-8ad7-dbf4a7efcfd3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#DT = datasets.SimulationData(simulation_names=['P2L', 'DG'], filter_scales=['50','100','200','400'])\n",
+    "DT = datasets.SimulationData(simulation_names=experiment_config['simulation_names'], \n",
+    "                             filter_scales=experiment_config['filter_scales'], \n",
+    "                             window_size = experiment_config['window_size'],\n",
+    "                             time_sel = experiment_config['all_time_range'],\n",
+    "                             single_layer_mask=experiment_config['single_layer_mask'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "ae84e007-3fff-4c19-925f-a8043a4d8dc5",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Will load : 1.11232 gb into memory.\n",
-      "load took: 39.6390 seconds\n",
-      "Will load : 0.111232 gb into memory.\n",
-      "load took: 5.2128 seconds\n"
+      "Will load : 0.74592 gb into memory.\n",
+      "load took: 31.3907 seconds\n",
+      "Will load : 0.06216 gb into memory.\n",
+      "load took: 3.8639 seconds\n"
      ]
     }
    ],
    "source": [
-    "\n",
-    "#DT = datasets.SimulationData(simulation_names=['P2L', 'DG'], filter_scales=['50','100','200','400'])\n",
-    "DT = datasets.SimulationData(simulation_names=experiment_config['simulation_names'], \n",
-    "                             filter_scales=experiment_config['filter_scales'], \n",
-    "                             window_size = experiment_config['window_size'])\n",
-    "\n",
     "ML_DT_train = datasets.MLXarrayDataset(simulation_data=DT, \n",
     "                                       all_ml_variables=experiment_config['all_ml_variables'],\n",
     "                                       time_range=experiment_config['train_time_range'],\n",
