pointwise skill metric plots

--- a/evaluate_model_design/main_text_models/train_main_models.ipynb
+++ b/evaluate_model_design/main_text_models/train_main_models.ipynb
@@ -124,7 +124,7 @@
     "                    #'num_inputs': 55, \n",
     "                    'network_shape': [48, 48, 2],\n",
     "\n",
-    "                    'ckpt_save_dir': '/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/main_models/window_3/shape_48_48_2/'\n",
+    "                    'ckpt_save_dir': '/home/jovyan/mesoscale_buoyancy_param_ML/ML_checkpoints/main_models/window_all/shape_48_48_2/'\n",
     "                    \n",
     "            }\n"
    ]
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2eaf76c2-00df-46fd-b820-6ddc65460e7a",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to load in DT for: 5point\n"
+      "Starting to load in DT for: 5point\n",
+      "Starting to load in ML-DT for: 5point\n",
+      "Will load : 20.60402688 gb into memory.\n",
+      "load took: 262.5847 seconds\n",
+      "Will load : 1.28775168 gb into memory.\n",
+      "load took: 21.2812 seconds\n",
+      "Num parameters to train 9698 for 5point\n",
+      "Start training:  5point\n",
+      "At epoch 1. Train loss :  0.2016762198181823 , Test loss: 0.1717205662280321 , Test R2: 0.28902073204517365\n",
+      "At epoch 21. Train loss :  0.13135792315006256 , Test loss: 0.1304002981632948 , Test R2: 0.5076948404312134\n",
+      "At epoch 41. Train loss :  0.12491731037152931 , Test loss: 0.12446333561092615 , Test R2: 0.535236306488514\n",
+      "At epoch 61. Train loss :  0.12153919332195073 , Test loss: 0.12067019566893578 , Test R2: 0.5504225492477417\n",
+      "At epoch 81. Train loss :  0.11968319810694084 , Test loss: 0.11972715519368649 , Test R2: 0.5584119036793709\n",
+      "Early stopping at epoch 98. No improvement in 10 epochs.\n",
+      "Restored best model with smoothed test loss 0.118132\n"
      ]
     }
    ],
@@ -350,59 +364,6 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "8a5b1cb9-0389-4b9a-809d-6d1f63c65df0",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "0dd4329f-acdd-4fe7-868c-4c302698346b",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "KeyError",
-     "evalue": "'regress_sys'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[17], line 7\u001b[0m\n\u001b[1;32m      4\u001b[0m fig \u001b[38;5;241m=\u001b[39m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m5\u001b[39m, \u001b[38;5;241m4\u001b[39m\u001b[38;5;241m*\u001b[39mnum_models))  \n\u001b[1;32m      6\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m i, set_keys \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(exp_sets\u001b[38;5;241m.\u001b[39mkeys()):\n\u001b[0;32m----> 7\u001b[0m     regress_sys \u001b[38;5;241m=\u001b[39m \u001b[43mexp_sets\u001b[49m\u001b[43m[\u001b[49m\u001b[43mset_keys\u001b[49m\u001b[43m]\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mregress_sys\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m \n\u001b[1;32m      8\u001b[0m     plt\u001b[38;5;241m.\u001b[39msubplot(num_models, \u001b[38;5;241m1\u001b[39m, i\u001b[38;5;241m+\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      9\u001b[0m     plt\u001b[38;5;241m.\u001b[39mplot(regress_sys\u001b[38;5;241m.\u001b[39mtrain_loss, label\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mTraining loss, \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(regress_sys\u001b[38;5;241m.\u001b[39mtrain_loss[\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]))\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'regress_sys'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 500x1200 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "## Loss plot\n",
-    "num_models = len(exp_sets.keys())\n",
-    "\n",
-    "fig = plt.figure(figsize=(5, 4*num_models))  \n",
-    "\n",
-    "for i, set_keys in enumerate(exp_sets.keys()):\n",
-    "    regress_sys = exp_sets[set_keys]['regress_sys'] \n",
-    "    plt.subplot(num_models, 1, i+1)\n",
-    "    plt.plot(regress_sys.train_loss, label='Training loss, '+str(regress_sys.train_loss[-1]))\n",
-    "    plt.plot(regress_sys.test_loss, label='Test loss'+str(regress_sys.test_loss[-1]))\n",
-    "\n",
-    "    plt.grid()\n",
-    "    plt.yscale('log')\n",
-    "    plt.title(exp_sets[set_keys]['sel_sim'])\n",
-    "    plt.legend()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26a0ae62-cf8f-4888-ba58-1deb2933aa1a",
    "metadata": {},
    "outputs": [],
    "source": []
