ANN params for GM model

--- a/online_analysis_Greene/generate_test_ann_params.ipynb
+++ b/online_analysis_Greene/generate_test_ann_params.ipynb
@@ -21,14 +21,14 @@
     "##### The ANN_PARAMS_FILE\n",
     "\n",
     "This netcdf file has a number of variables. \n",
-    "- layer_sizes - An integer array, with size equal to ANN_num_layers. Each integer corresponds to the number of nodes in that layers. \n",
-    "- An, bn - These are weights and bias matrices. n ranges from 0 onwards. The number of these parameter sets will be equal to the (number of layers -1); this is because each set of parameters transforms nodes of one layer to the next.\n",
-    "- normalizations (not implemented yet). "
+    "- `layer_sizes` - An integer array, with size equal to ANN_num_layers. Each integer corresponds to the number of nodes in that layers. \n",
+    "- `An`, `bn` - These are weights and bias matrices. n ranges from 0 onwards. The number of these parameter sets will be equal to the (number of layers -1); this is because each set of parameters transforms nodes of one layer to the next.\n",
+    "- normalizations as `input_norms`, `output_norms`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,49 +38,97 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
+   "source": [
+    "The code that writes this file looks a bit like:\n",
+    "\n",
+    "```\n",
+    " def save_weights_nc_windowed(self, nc_fname): \n",
+    "        \n",
+    "        input_norms = np.zeros((len(self.input_channels),))\n",
+    "        output_norms = np.zeros((len(self.output_channels),))\n",
+    "\n",
+    "        for n, i in enumerate(self.input_channels):\n",
+    "            input_norms[n] = self.ML_data.norm_factors[i].values\n",
+    "\n",
+    "        for n, i in enumerate(self.output_channels):\n",
+    "            output_norms[n] = self.ML_data.norm_factors[i].values\n",
+    "\n",
+    "        ds_layers = xr.Dataset()\n",
+    "\n",
+    "        ds_layers['layer_sizes'] = xr.DataArray(np.array([len(self.input_channels)*self.ML_data.window_size**2,\n",
+    "                                                          self.network.shape[0], \n",
+    "                                                          self.network.shape[1], len(self.output_channels)]).astype('int32'), \n",
+    "                                                dims=['num_layers'])\n",
+    "\n",
+    "        ds_layers['A0'] = xr.DataArray(np.array(self.state.params['params']['layers_0']['kernel']).astype('float32'), dims=['input', 'layer1'])\n",
+    "        ds_layers['A1'] = xr.DataArray(np.array(self.state.params['params']['layers_1']['kernel']).astype('float32'), dims=['layer1', 'layer2'])\n",
+    "        ds_layers['A2'] = xr.DataArray(np.array(self.state.params['params']['layers_2']['kernel']).astype('float32'), dims=['layer2', 'output'])\n",
+    "\n",
+    "        if self.network.bias:\n",
+    "            ds_layers['b0'] = xr.DataArray(np.array(self.state.params['params']['layers_0']['bias']).astype('float32'), dims=['layer1'])\n",
+    "            ds_layers['b1'] = xr.DataArray(np.array(self.state.params['params']['layers_1']['bias']).astype('float32'), dims=['layer2'])\n",
+    "            ds_layers['b2'] = xr.DataArray(np.array(self.state.params['params']['layers_2']['bias']).astype('float32'), dims=['output'])\n",
+    "        else: \n",
+    "            ds_layers['b0'] = xr.DataArray(np.zeros(self.network.shape[0]).astype('float32'), dims=['layer1'])\n",
+    "            ds_layers['b1'] = xr.DataArray(np.zeros(self.network.shape[1]).astype('float32'), dims=['layer2'])\n",
+    "            ds_layers['b2'] = xr.DataArray(np.zeros(self.network.shape[2]).astype('float32'), dims=['output'])\n",
+    "\n",
+    "\n",
+    "        ds_layers['input_norms'] = xr.DataArray(input_norms.astype('float32'), dims=['input_channels'])\n",
+    "        ds_layers['output_norms'] = xr.DataArray(output_norms.astype('float32'), dims=['output'])\n",
+    "        \n",
+    "        ds_layers.attrs['CKPT_DIR'] = self.CKPT_DIR\n",
+    "        ds_layers.attrs['shape'] = self.network.shape\n",
+    "        ds_layers.attrs['num_in'] = len(self.input_channels)\n",
+    "        ds_layers.attrs['input_channels'] = self.input_channels\n",
+    "        ds_layers.attrs['output_channels'] = self.output_channels\n",
+    "        \n",
+    "\n",
+    "        ds_layers.to_netcdf(nc_fname, mode='w')\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Diffusive repro case"
+    "### Diffusive case\n",
+    "\n",
+    "For testing we pass in some A and b such that the output would be like a thickness diffusion model. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_layers = 2 # input slopes and output KS"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ds = xr.Dataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "num_layers = 2 # input slopes and output KS\n",
+    "\n",
+    "ds = xr.Dataset()\n",
+    "\n",
     "ds['layer_sizes'] = xr.DataArray(np.array([2,2]).astype('int32'), dims=['num_layers'])\n",
     "\n",
-    "ds['A0'] = xr.DataArray(np.array([[1000,0], [0, 1000]]).astype('float32'), dims=['input', 'output'])\n",
-    "ds['A0'] = ds.A0 * 20e3\n",
-    "ds['b0'] = xr.DataArray(np.array([0,0]).astype('float32'), dims=['output'])"
+    "ds['A0'] = xr.DataArray(np.array([[-1000,0], [0, -1000]]).astype('float32'), dims=['input', 'output'])\n",
+    "ds['b0'] = xr.DataArray(np.array([0,0]).astype('float32'), dims=['output'])\n",
+    "\n",
+    "ds['input_norms'] = xr.DataArray(np.array([1,1]).astype('float32'), dims=['input'])\n",
+    "ds['output_norms'] = xr.DataArray(np.array([1,1]).astype('float32'), dims=['output'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds"
+    "ds.to_netcdf('./thickness_diffuse_k1000_ann_params.nc', mode='w')"
    ]
   },
   {
@@ -1487,9 +1535,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "notebook",
+   "display_name": "new_env",
    "language": "python",
-   "name": "pangeo_dock"
+   "name": "new_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1501,7 +1549,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
