updating figure gen notebooks

--- a/evaluate_model_design/main_text_models/train_main_models.ipynb
+++ b/evaluate_model_design/main_text_models/train_main_models.ipynb
@@ -34,9 +34,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-02-22 21:29:58.507040: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2025-02-22 21:29:58.521684: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2025-02-22 21:29:58.526008: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+      "2025-04-28 17:16:19.862000: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-04-28 17:16:19.875908: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-04-28 17:16:19.880041: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
      ]
     }
    ],
@@ -136,27 +136,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "experiment_configs = {'1point':{'window_size':1, 'num_inputs':6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'1point'},\n",
-    "                      '3point':{'window_size':3, 'num_inputs':3*3*6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'3point'},\n",
-    "                      '5point':{'window_size':5, 'num_inputs':5*5*6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'5point'}    \n",
+    "experiment_configs = {'1point':{'window_size':1, 'num_inputs':6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'1point', 'nc_file': 'main_ANN_window_1.nc'},\n",
+    "                      '3point':{'window_size':3, 'num_inputs':3*3*6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'3point', 'nc_file': 'main_ANN_window_3.nc'},\n",
+    "                      '5point':{'window_size':5, 'num_inputs':5*5*6, 'exp_ckpt_save_dir': common_config['ckpt_save_dir']+'5point', 'nc_file': 'main_ANN_window_5.nc'}    \n",
     "                        }"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "df951613-1311-4b32-aa03-1b6e9eccbd97",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1bbd0f8b-3f5a-41e4-9374-9008b858b3da",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -176,39 +160,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting to load in DT for: 1point\n",
-      "Starting to load in ML-DT for: 1point\n",
-      "Will load : 1.70606592 gb into memory.\n",
-      "load took: 46.3920 seconds\n",
-      "Will load : 0.10662912 gb into memory.\n",
-      "load took: 4.5018 seconds\n",
-      "Num parameters to train 2786 for 1point\n",
-      "Start training:  1point\n",
-      "At epoch 1. Train loss :  0.4628345638047904 , Test loss: 0.45763134583830833 , Test R2: -1.119167536497116\n",
-      "At epoch 21. Train loss :  0.45518867764621973 , Test loss: 0.4552800618112087 , Test R2: -1.1178016662597656\n",
-      "Early stopping at epoch 25. No improvement in 10 epochs.\n",
-      "Restored best model with smoothed test loss 0.455523\n",
-      "Starting to load in DT for: 3point\n",
-      "Starting to load in ML-DT for: 3point\n",
-      "Will load : 8.00538624 gb into memory.\n",
-      "load took: 134.1020 seconds\n",
-      "Will load : 0.50033664 gb into memory.\n",
-      "load took: 10.8898 seconds\n",
-      "Num parameters to train 5090 for 3point\n",
-      "Start training:  3point\n",
-      "At epoch 1. Train loss :  0.24254556372761726 , Test loss: 0.21503141149878502 , Test R2: 0.0999240055680275\n",
-      "At epoch 21. Train loss :  0.18010591622442007 , Test loss: 0.1802458930760622 , Test R2: 0.26771487295627594\n",
-      "At epoch 41. Train loss :  0.17446574242785573 , Test loss: 0.17290109768509865 , Test R2: 0.30051256716251373\n",
-      "At epoch 61. Train loss :  0.17136084393132478 , Test loss: 0.17014254070818424 , Test R2: 0.3118700161576271\n",
-      "Early stopping at epoch 78. No improvement in 10 epochs.\n",
-      "Restored best model with smoothed test loss 0.169701\n",
-      "Starting to load in DT for: 5point\n"
+      "Starting to load in DT for: 1point\n"
      ]
     }
    ],
    "source": [
     "#DT = datasets.SimulationData(simulation_names=['P2L', 'DG'], filter_scales=['50','100','200','400'])\n",
-    "for key in experiment_configs.keys():\n",
+    "#for key in experiment_configs.keys():\n",
+    "for key in ['1point']:#experiment_configs.keys():\n",
     "\n",
     "    print('Starting to load in DT for: ' + key)\n",
     "    DT = datasets.SimulationData(simulation_names=common_config['simulation_names'], \n",
@@ -262,7 +221,25 @@
     "    experiment_configs[key]['regress_sys'] = regress_sys\n",
     "\n",
     "    regress_sys.save_checkpoint(experiment_configs[key]['exp_ckpt_save_dir'])\n",
+    "\n",
+    "    regress_sys.save_nc(nc_fname = experiment_configs[key]['nc_file'], \n",
+    "                    ML_DT_train=ML_DT_train, \n",
+    "                    input_channels = common_config['input_channels'],\n",
+    "                    output_channels = common_config['output_channels'],\n",
+    "                    ckpt_save_dir = experiment_configs[key]['exp_ckpt_save_dir'])\n",
+    "\n",
+    "    print('NC file with weights saved')\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b2ede0e9-d854-4b12-b4e6-53792974cd51",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "DT.simulation_data"
    ]
   },
   {
@@ -385,7 +362,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
