--- a/offline_analysis/bulk_skill/evaluation_skill_plot.ipynb
+++ b/offline_analysis/bulk_skill/evaluation_skill_plot.ipynb
@@ -157,7 +157,11 @@
    "cell_type": "code",
    "execution_count": 32,
    "id": "0557c2ba-809a-459f-beb1-7fcf7f2a07d2",
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -593,7 +597,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
