--- a/paper_figure_notebooks/Figure5-evaluate_main_text_models.ipynb
+++ b/paper_figure_notebooks/Figure5-evaluate_main_text_models.ipynb
@@ -10,10 +10,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "02573bef-a47c-4e34-9b72-66f7870168ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-04-30 11:52:38.519596: E external/local_xla/xla/stream_executor/cuda/cuda_fft.cc:485] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
+      "2025-04-30 11:52:38.533062: E external/local_xla/xla/stream_executor/cuda/cuda_dnn.cc:8454] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
+      "2025-04-30 11:52:38.537584: E external/local_xla/xla/stream_executor/cuda/cuda_blas.cc:1452] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n"
+     ]
+    }
+   ],
    "source": [
     "import warnings\n",
     "\n",
@@ -36,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b98546b5-1df4-46ac-b2fe-06584915c0f6",
    "metadata": {},
    "outputs": [],
@@ -93,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a5482112-4ba4-42e5-8212-c3d464484469",
    "metadata": {},
    "outputs": [],
@@ -106,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9f7d3056-8d6d-4ef6-8cea-4926d39e5fde",
    "metadata": {},
    "outputs": [
@@ -117,12 +127,7 @@
       "Starting to load in DT for: 1point\n",
       "Opening up eval sys: 1point\n",
       "Reading model and predicting: 1point\n",
-      "Starting to load in DT for: 3point\n",
-      "Opening up eval sys: 3point\n",
-      "Reading model and predicting: 3point\n",
-      "Starting to load in DT for: 5point\n",
-      "Opening up eval sys: 5point\n",
-      "Reading model and predicting: 5point\n"
+      "Starting to load in DT for: 3point\n"
      ]
     }
    ],
@@ -162,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5a98d812-937d-4621-8d40-b2180e3db3df",
    "metadata": {},
    "outputs": [],
@@ -176,21 +181,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3fd4ef9c-a2dd-45b7-95d6-dc340b96e4d5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 137.35475573202697\n",
-      "100 596.2756002052041\n",
-      "200 2287.256437521506\n",
-      "400 6266.264732283053\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for l in common_config['filter_scales']:\n",
     "    print(l, experiment_configs[key]['eval_sys'].eval_datatree.ml_dataset['P2L'][l]['kappa_gent_mcwilliams'].values)"
@@ -198,21 +192,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "80fb769f-f55a-4355-a8d8-ff53a7268ce8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 39.53965900761229\n",
-      "100 104.54144546531508\n",
-      "200 191.5377789814487\n",
-      "400 107.99485362834537\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for l in common_config['filter_scales']:\n",
     "    print(l, experiment_configs[key]['eval_sys'].eval_datatree.ml_dataset['DG'][l]['kappa_gent_mcwilliams'].values)"
@@ -220,21 +203,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "eee369ba-8b72-42ee-b991-b7cd517d9539",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 0.0747683248210061\n",
-      "100 0.0721502878767952\n",
-      "200 0.06684015592111338\n",
-      "400 0.04754715533766596\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for l in common_config['filter_scales']:\n",
     "    print(l, experiment_configs[key]['eval_sys'].eval_datatree.ml_dataset['DG'][l]['c_grad_model'].values)"
@@ -242,21 +214,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "3419270a-bd1d-4b36-a354-80e5ba38bd5e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "50 0.11399738487285781\n",
-      "100 0.07677721685625655\n",
-      "200 0.07636262152276616\n",
-      "400 0.09103337013738828\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "for l in common_config['filter_scales']:\n",
     "    print(l, experiment_configs[key]['eval_sys'].eval_datatree.ml_dataset['P2L'][l]['c_grad_model'].values)"
@@ -264,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "0a82412b-99df-47ee-bf7c-1407c69e32c0",
    "metadata": {},
    "outputs": [],
@@ -279,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0d749a9b-e825-432b-999c-a92aafd5a9ba",
    "metadata": {},
    "outputs": [],
@@ -807,6 +768,9 @@
     "\n",
     "# Define a color palette\n",
     "colors = sns.color_palette(\"tab10\", len(skill_metrics.model))\n",
+    "\n",
+    "# Labels\n",
+    "labels = ['1X1','3X3','5X5', 'GM','VGM']\n",
     "\n",
     "# Create figure\n",
     "fig, axes = plt.subplots(2, 2, figsize=(6, 5), constrained_layout=True)\n",
